<resources>
    <string name="app_name">Smart</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">forget password?</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Signup</string>
    <string name="signin">signin</string>
    <string name="todo">TODO</string>
    <string name="signup">Register</string>
    <string name="email">Email</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="smart">Smart</string>
    <string name="port_1">Port1</string>
    <string name="faq_feedback"><![CDATA[FAQ  & Feedback]]></string>
    <string name="home_management">Home Management</string>
    <string name="message_center">Message center</string>
    <string name="port_2">Port 2</string>
    <string name="port_3">Port 3</string>
    <string name="port_4">Port 4</string>
    <string name="settings">Settings</string>
    <string name="phonenumber">Phonenumber</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigation">Bottom_Navigation_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="channel_name">channel1</string>
    <string name="channel_description">description1</string>
    <string name="add_device">Add device</string>
    <string name="auto_on_off">Auto On / Off</string>
    <string name="report_issue">Report Issue</string>
    <string name="select_issue">Select Issue:</string>
    <string name="problem_suggestion">Problem/Suggestion:</string>
    <string name="submit">Submit</string>
    <string name="ble_not_supported">BLE not supported on this device</string>
    <string name="bt_unavailable">Bluetooth unavailable</string>
    <string name="bt_disabled">Bluetooth disabled, turn on and restart</string>
    <!-- Scan -->
    <string name="action_scan">SCAN</string>
    <string name="action_stop">STOP</string>
    <!-- Device -->
    <string name="read_manufacturer_name">Read Manufacturer Name</string>
    <string name="read_serial_number">Read Serial Number</string>
    <string name="write_alert_level">Write Alert Level</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>


</resources>