<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meganar.smart.LoginscreenActivity"
    android:padding="20dp"
    android:background="@drawable/login_background"

    android:orientation="vertical">

    <ImageView
        android:id="@+id/home"
        android:layout_width="147dp"
        android:layout_height="309dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        android:src="@drawable/icon"
        android:textColor="@color/blue" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textColor="@color/blue"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColorHint="#757575" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            android:maxLines="1"

            android:textColor="@color/blue"
            android:textColorHint="#757575"
            app:passwordToggleEnabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="1dp"
        android:textColor="@color/blue"
        android:background="@color/transparent"
        android:text="@string/forget_password"
       />



    <Button
        android:id="@+id/signin"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/signin"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:background="@drawable/roundconer"

        tools:ignore="DuplicateSpeakableTextCheck,UsingOnClickInXml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/new_user"
        android:textColor="@color/blue"
        android:layout_marginBottom="15dp"
        android:textAlignment="center"
        />
    <ProgressBar
        android:id="@+id/prog1"
        android:textColor="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />


    <Button
        android:id="@+id/signup"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:background="@drawable/roundconer"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        tools:ignore="OnClick" />
</LinearLayout>