<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Adddevices"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorAccent"
        android:padding="16dp">

        <ImageView
            android:id="@+id/adddevback"

            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="Devices"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold">
            </TextView>

        <ImageView
            android:id="@+id/add_dev_1"
            android:layout_width="25dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"

            android:src="@drawable/ic_baseline_add_circle_outline_24"
            app:tint="@color/white"
            >

        </ImageView>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="16dp">



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="15sp"
            android:id="@+id/c1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp">
                <TextView
                    android:id="@+id/port111"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/port_1"

                    android:textSize="20sp"
                    android:textColor="?colorAccent"
                    android:textStyle="bold"/>


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"



                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="15sp"
            android:id="@+id/c2"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp">
                <TextView
                    android:id="@+id/t2"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/port_2"
                    android:textColor="?colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    tools:ignore="DuplicateSpeakableTextCheck"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="15sp"
            android:id="@+id/c3"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp">
                <TextView
                    android:id="@+id/p13"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/port_3"
                    android:textColor="?colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"/>


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    tools:ignore="DuplicateSpeakableTextCheck"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            app:cardCornerRadius="15sp"
            android:layout_marginBottom="10dp"
            android:id="@+id/c4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp">
                <TextView
                    android:id="@+id/p14"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/port_4"
                    android:textColor="?colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold"/>


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"

                    tools:ignore="DuplicateSpeakableTextCheck"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>


</FrameLayout>