<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.meganar.smart.ProfileActivity"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?colorAccent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="20dp">

        </TextView>

        <ImageView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:tint="@color/white"
            android:src="@drawable/ic_baseline_settings_24">

        </ImageView>



    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="10dp">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/roundconer"
                android:src="@drawable/ic_round_account_circle_24"
                app:tint="?colorAccent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_marginLeft="350dp"
                android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
                app:tint="?colorAccent">

            </ImageView>

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="18dp"
                android:hint="   "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold">

            </TextView>


            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:hint="   "
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="italic">

            </TextView>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/ca1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/car"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:id="@+id/l1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_baseline_device_thermostat_24"
                    android:drawablePadding="5dp"
                    android:drawableTint="?colorAccent"
                    android:text="Weather"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/ca5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ca1"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:id="@+id/l5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="?colorAccent"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                    app:drawableStartCompat="@drawable/ic_baseline_settings_24">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/ca2_msg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ca5"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:id="@+id/l2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_outline_message_24"

                    android:drawablePadding="5dp"
                    android:drawableTint="?colorAccent"
                    android:text="@string/message_center"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/ca3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ca2_msg"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:id="@+id/l3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"

                    android:layout_marginTop="15dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="?colorAccent"
                    android:text="@string/faq_feedback"
                    android:textColor="@color/black"
                    app:drawableEndCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                    app:drawableStartCompat="@drawable/ic_baseline_help_outline_24">

                </TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/ca4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ca3"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:id="@+id/l4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="?colorAccent"
                    android:text="Logout"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/ic_baseline_login_24"></TextView>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/prof_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_bar"
        tools:ignore="MissingConstraints"></com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>